# movie-recommender

./: .gitignore  README.md  hello.py  pyproject.toml
src/: .env  movie_recommender.py
